--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,11 +1,16 @@
 ﻿@using System;
+@using System.Net;
+@using semester_projekt.Shared.Models;
+@using System;
 @using Dapper;
 @using Npgsql;
-@using semester_projekt.Shared.Models;
+@using semester_projekt.Client.Services;
+@using System.Net.Http;
+
 
 @page "/"
 
 
 @code{
-    
+
 }
