--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Bruger side
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="bruger">
+                <span class="oi oi-plus" aria-hidden="true"></span> Opret ny vagt
+            </NavLink>
+        </div>
     </nav>
 </div>
 
