--- a/Client/Pages/OpretNyVagt.razor
+++ b/Client/Pages/OpretNyVagt.razor
@@ -13,7 +13,6 @@
 
 <div class="opretvagt">
     <EditForm EditContext="@EditContext" class="row p-3">
-        <DataAnnotationsValidator />
         <div class="col-md-12 mb-3">
             <label for="VagtId">Vagt ID</label>
             <InputNumber id="VagtId" @bind-Value="Vagt.VagtId" class="form-control" />
@@ -30,27 +29,27 @@
 
         <div class="col-md-6 mb-3">
             <label for="VagtStart">Vagt start</label>
-            <InputDate id="VagtStart" @bind-Value="Vagt.VagtStart" class="form-control" />
+            <InputNumber id="VagtStart" @bind-Value="Vagt.VagtStart" class="form-control" />
         </div>
 
         <div class="col-md-6 mb-3">
             <label for="VagtSlut">Vagt slut</label>
-            <InputDate id="VagtSlut" @bind-Value="Vagt.VagtSlut" class="form-control" />
+            <InputNumber id="VagtSlut" @bind-Value="Vagt.VagtSlut" class="form-control" />
         </div>
 
         <div class="col-md-6 mb-3">
             <label for="Pause">Pause</label>
-            <InputDate id="Pause" @bind-Value="Vagt.Pause" class="form-control" />
+            <InputNumber id="Pause" @bind-Value="Vagt.Pause" class="form-control" />
         </div>
 
         <div class="col-md-6 mb-3">
             <label for="Område">Område</label>
-            <InputDate id="Område" @bind-Value="Vagt.Område" class="form-control" />
+            <InputText id="Område" @bind-Value="Vagt.Område" class="form-control" />
         </div>
 
         <div class="col-md-6 mb-3">
             <label for="OpgaveId">Opgave ID</label>
-            <InputDate id="OpgaveId" @bind-Value="Vagt.OpgaveId" class="form-control" />
+            <InputNumber id="OpgaveId" @bind-Value="Vagt.OpgaveId" class="form-control" />
         </div>
 
         <br />
