--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -25,7 +25,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="bruger">
+            <NavLink class="nav-link" href="nyvagt">
                 <span class="oi oi-plus" aria-hidden="true"></span> Opret ny vagt
             </NavLink>
         </div>
