--- a/Client/Pages/OpretNyVagt.razor
+++ b/Client/Pages/OpretNyVagt.razor
@@ -29,12 +29,12 @@
 
         <div class="col-md-6 mb-3">
             <label for="VagtStart">Vagt start</label>
-            <InputNumber id="VagtStart" @bind-Value="Vagt.VagtStart" class="form-control" />
+            <InputDate id="VagtStart" @bind-Value="Vagt.VagtStart" class="form-control" />
         </div>
 
         <div class="col-md-6 mb-3">
             <label for="VagtSlut">Vagt slut</label>
-            <InputNumber id="VagtSlut" @bind-Value="Vagt.VagtSlut" class="form-control" />
+            <InputDate id="VagtSlut" @bind-Value="Vagt.VagtSlut" class="form-control" />
         </div>
 
         <div class="col-md-6 mb-3">
