--- a/Client/Pages/KoordinatorSide.razor
+++ b/Client/Pages/KoordinatorSide.razor
@@ -20,8 +20,7 @@
             <th>Vagt slut</th>
             <th>Pause</th>
             <th>Område</th>
-            <th>Opgave ID</th> <!--Dette skal evt laves til en join m. OpgaveBeskrivelse i stedet-->
-            <th>Er booket?</th>
+            <th>Opgave beskrivelse</th> <!--Dette skal evt laves til en join m. OpgaveBeskrivelse i stedet-->
             <th>Bruger ID</th>
         </tr>
         @foreach (var vagt in Vagter)
@@ -33,27 +32,26 @@
                 <td>@vagt.VagtSlut</td>
                 <td>@vagt.Pause</td>
                 <td>@vagt.Område</td>
-                <td>@vagt.OpgaveId</td>
-                <td>@vagt.ErBooket</td>
+                <td>@vagt.OpgaveBeskrivelse</td>
                 <td>@vagt.BrugerId</td>
             </tr>
         }
     </table>
 
+    <br />
+
     <table class="frivillige">
         @foreach (var bruger in Brugere)
         {
             <tr>
-                <th>Bruger ID</th>
                 <th>Bruger Navn</th>
                 <th>Bruger Email</th>
-                <th>Rolle ID</th>
+                <th>Kompetencer</th>
             </tr>
             <tr>
-                <td>@bruger.BrugerId</td>
                 <td>@bruger.BrugerNavn</td>
                 <td>@bruger.BrugerEmail</td>
-                <td>@bruger.RolleId</td>
+                <td>@bruger.KompetenceBeskrivelse</td>
             </tr>
         }
     </table>
